--- a/public/css/michael-nusair.webflow.css
+++ b/public/css/michael-nusair.webflow.css
@@ -877,7 +877,7 @@ figcaption {
   }
 
   .heading-jumbo {
-    font-size: 56px;
+    font-size: 50px;
     line-height: 70px;
   }
 
@@ -1347,11 +1347,7 @@ figcaption {
 }
 
 #w-node-dac044b7-be90-60f3-414d-4224828ffd90-af9ea984 {
-  grid-area: 1 / 1 / 2 / 2;
-}
-
-#w-node-dac044b7-be90-60f3-414d-4224828ffd99-af9ea984 {
-  grid-area: 1 / 2 / 2 / 3;
+  grid-area: 1 / 1 / 2 / 3;
 }
 
 #w-node-dac044b7-be90-60f3-414d-4224828ffda1-af9ea984 {
@@ -1411,7 +1407,13 @@ figcaption {
     grid-area: 2 / 2 / 3 / 3;
   }
 
-  #w-node-_9b2922ad-09b1-aebb-0430-7dee623c62c8-af9ea984, #w-node-dac044b7-be90-60f3-414d-4224828ffd8f-af9ea984, #w-node-dac044b7-be90-60f3-414d-4224828ffd99-af9ea984 {
+  #w-node-_9b2922ad-09b1-aebb-0430-7dee623c62c8-af9ea984 {
+    grid-area: 2 / 1 / 3 / 2;
+    align-self: center;
+    justify-self: center;
+  }
+
+  #w-node-dac044b7-be90-60f3-414d-4224828ffd8f-af9ea984 {
     grid-area: 2 / 1 / 3 / 2;
   }
 
